# Dora

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: assert.hpp  case.hpp  dora.hpp  errors.hpp
src/: CMakeLists.txt  assert.cpp  case.cpp  dora.cpp  errors.cpp
unittest/: CMakeLists.txt  run_unittest.sh  test_assert.cpp
